Update footer: change copyright to 2025, update email to chilantumovies@gmail.com, update address to UP Greater Noida, add cache-busting for browser refresh

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>🌱 CropGuard AI - Smart Crop Disease Detection</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2025">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
@@ -426,7 +429,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>contact@cropguardai.com</p>
+                            <p>chilantumovies@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -440,7 +443,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Location</h4>
-                            <p>123 Agriculture St, Farm City, FC 12345</p>
+                            <p>UP Greater Noida</p>
                         </div>
                     </div>
                 </div>
@@ -504,7 +507,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CropGuard AI. All rights reserved.</p>
+                <p>&copy; 2025 CropGuard AI. All rights reserved. | Updated 2025</p>
             </div>
         </div>
     </footer>
@@ -581,7 +584,7 @@
                     <div class="accuracy-info">
                         <p><strong>Dataset Size:</strong> 50,000+ verified crop images</p>
                         <p><strong>Test Accuracy:</strong> 99.2% on validation set</p>
-                        <p><strong>Last Model Update:</strong> December 2024</p>
+                        <p><strong>Last Model Update:</strong> 2025</p>
                         <p><strong>Supported Diseases:</strong> 50+ common crop diseases</p>
                     </div>
                     
@@ -610,6 +613,18 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2025"></script>
+    <!-- Cache bust: 2025 - Updated at 2025-01-27 -->
+    <script>
+        console.log('Page loaded at:', new Date().toISOString());
+        // Force update copyright year
+        document.addEventListener('DOMContentLoaded', function() {
+            const copyrightElement = document.querySelector('.footer-bottom p');
+            if (copyrightElement) {
+                copyrightElement.innerHTML = '&copy; 2025 CropGuard AI. All rights reserved. | Updated 2025';
+                console.log('Copyright updated to 2025');
+            }
+        });
+    </script>
 </body>
 </html>
