Fix button click issues - Add debugging and test functions

--- a/index.html
+++ b/index.html
@@ -501,7 +501,15 @@
                 </button>
                 <button class="input-mode-btn" onclick="testHappyDirect()" style="background: #ff6b6b;">
                     <i class="fas fa-bug"></i>
-                    <span>Test</span>
+                    <span>Test Happy</span>
+                </button>
+                <button class="input-mode-btn" onclick="activateHappyDirect()" style="background: #4CAF50;">
+                    <i class="fas fa-magic"></i>
+                    <span>Activate Happy</span>
+                </button>
+                <button class="input-mode-btn" onclick="testButtonClick()" style="background: #FF9800;">
+                    <i class="fas fa-check"></i>
+                    <span>Test Click</span>
                 </button>
             </div>
                             
